basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: nodeapp2
  annotations:
    kubernetes.io/ingress.class: "gce"  # Specify the GCP controller
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nodeapp-service-new
            port:
              number: 80
