gcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: nodeapp2
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: nodeapp.gotdns.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service-new
            port:
              number: 8080
  tls:
  - hosts:
    - nodeapp.gotdns.ch
    secretName: nodeapp-tls
