new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress-new
  namespace: nodeapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nodeapp.gotdns.ch
    secretName: nodeapp-tls-new
  rules:
  - host: nodeapp.gotdns.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service-new
            port:
              number: 80
